# research_platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  FUNCTIONAL_SPEC.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260417_000001_initial_auth_personalization.py  20260417_000002_openalex_domain_and_analytics.py
app/: __init__.py  main.py
app/api/: deps.py  query_params.py  router.py
app/api/v1/: analytics.py  auth.py  authors.py  collections.py  favorites.py  health.py  ingestion.py  me.py  pages.py  publications.py  saved_searches.py  subscriptions.py  topics.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  (+6 more)
app/schemas/: analytics.py  auth.py  domain.py  openalex.py  personalization.py
app/services/: analytics_service.py  auth_service.py  collector_service.py  openalex_client.py  personalization_service.py  processor_service.py  repository_service.py
app/static/: search-timer.js  user-tools.js
app/templates/: analytics.html  author_detail.html  authors.html  base.html  index.html  ingestion.html  profile.html  publication_detail.html  publications.html  quality.html  topic_detail.html  topics.html
docs/: quality-report.md
load_tests/: k6_public_api.js
monitoring/: prometheus.yml
research_intelligence_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_collector_service.py  test_metrics.py  test_personalization_api.py  test_publication_query_params.py
(+2 files in other folders)
